--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 				<scope>import</scope>
 			</dependency>
 
+			<!--aop-->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-aop</artifactId>
+			</dependency>
 			<!-- Spring Boot Mybatis 依赖 -->
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
