--- a/snxy-user-agent-biz/pom.xml
+++ b/snxy-user-agent-biz/pom.xml
@@ -45,6 +45,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<!--redis redisTemplate-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+			<version>1.2.0.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
