--- a/snxy-user-agent-domain/pom.xml
+++ b/snxy-user-agent-domain/pom.xml
@@ -39,6 +39,19 @@
 			<!--<artifactId>spring-boot-starter-test</artifactId>-->
 			<!--<scope>test</scope>-->
 		<!--</dependency>-->
+
+		<dependency>
+			<groupId>com.snxy.common</groupId>
+			<artifactId>snxy-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+
+					<exclusions>
+						<exclusion> <!-- we prefer our explicit version, though it should be the same -->
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclusion>
+					</exclusions>
+		</dependency>
 	</dependencies>
 
 	<!--<build>-->
