--- a/snxy-user-agent-service/pom.xml
+++ b/snxy-user-agent-service/pom.xml
@@ -33,6 +33,13 @@
 			<artifactId>snxy-user-agent-domain</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<!--web-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
 			<!--<artifactId>spring-boot-starter-test</artifactId>-->
