--- a/snxy-user-agent-dao/src/main/resources/application.properties
+++ b/snxy-user-agent-dao/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://103.114.212.12:8206/snxy?characterEncoding=utf-8&allowMultiQueries=true
+#spring.datasource.url=jdbc:mysql://103.114.212.12:8206/snxy?characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/snxy?characterEncoding=utf-8&allowMultiQueries=true
 spring.datasource.username=admin
-spring.datasource.password=rootroot
-
-logging.level.com.snxy.user.agent.dao=debug
+spring.datasource.password=123456
