--- a/snxy-user-agent-dao/src/main/resources/application.properties
+++ b/snxy-user-agent-dao/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-#spring.datasource.url=jdbc:mysql://103.114.212.12:8206/snxy?characterEncoding=utf-8&allowMultiQueries=true
-spring.datasource.url=jdbc:mysql://localhost:3306/snxy?characterEncoding=utf-8&allowMultiQueries=true
-spring.datasource.username=admin
-spring.datasource.password=123456
+spring.profiles.active=local
