--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Finchley.SR1</spring-cloud.version>
 		<mybatis-spring-boot>1.3.2</mybatis-spring-boot>
-		<mysql-connector>5.1.39</mysql-connector>
+		<mysql-connector.version>5.1.39</mysql-connector.version>
 		<alibaba-druid.version>1.0.15</alibaba-druid.version>
 	</properties>
 
@@ -63,7 +63,7 @@
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
-				<version>${mysql-connector}</version>
+				<version>${mysql-connector.version}</version>
 			</dependency>
 
 			<!--德鲁伊连接池-->
