--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,11 @@
 			</dependency>
 
 			<!--aop-->
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-aop</artifactId>
-			</dependency>
+			<!--<dependency>-->
+				<!--<groupId>org.springframework.boot</groupId>-->
+				<!--<artifactId>spring-boot-starter-aop</artifactId>-->
+				<!--<version>LATEST</version>-->
+			<!--</dependency>-->
 			<!-- Spring Boot Mybatis 依赖 -->
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
