--- a/pom.xml
+++ b/pom.xml
@@ -72,13 +72,13 @@
 				<artifactId>druid</artifactId>
 				<version>${alibaba-druid.version}</version>
 			</dependency>
-			<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-dependencies</artifactId>-->
-			<!--<version>${spring-boot.version}</version>-->
-			<!--<type>pom</type>-->
-			<!--<scope>import</scope>-->
-			<!--</dependency>-->
+		<!--	<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>-->
 		</dependencies>
 	</dependencyManagement>
 	<build>
