--- a/snxy-user-agent-biz/pom.xml
+++ b/snxy-user-agent-biz/pom.xml
@@ -33,7 +33,10 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.snxy.user.agent</groupId>
 			<artifactId>snxy-user-agent-dao</artifactId>
