login和token获取用户一致

--- a/snxy-user-agent-web/src/main/resources/application-dev.properties
+++ b/snxy-user-agent-web/src/main/resources/application-dev.properties
@@ -42,3 +42,8 @@ spring.redis.timeout=5000
 
 # token过期时间
 token.expire.time=1
+
+
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.force=true
